created base component for pokecard

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
-        "navyblue"
+        "Pikachu",
+        "Pokecard",
+        "navyblue",
+        "pokecards"
     ],
     "eslint.options": {
         "ignorePattern": "webpack.config.js",
