added props to pokecard components

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
     "cSpell.words": [
+        "Gengar",
         "Pikachu",
         "Pokecard",
+        "Squirtle",
+        "charmander",
         "navyblue",
         "pokecards"
     ],
