--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
         "Squirtle",
         "charmander",
         "navyblue",
-        "pokecards"
+        "pokecards",
+        "pokemons"
     ],
     "eslint.options": {
         "ignorePattern": "webpack.config.js",
