--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "webpack-dev-server": "3.11.2"
   },
   "dependencies": {
+    "@fluentui/react": "^8.18.0",
+    "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typescript": "^4.3.2"
