optimized webpack for prod

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,6 @@
         "pokemons"
     ],
     "eslint.options": {
-        "ignorePattern": "webpack.config.js",
+        "ignorePattern": "webpack.*.js",
     }
 }
