--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "webpack": "webpack",
-    "start": "webpack serve",
+    "build:dev": "webpack --config webpack.dev.js",
+    "build:prod": "webpack --config webpack.prod.js",
+    "start": "webpack serve --open --config webpack.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -36,10 +37,10 @@
     "ts-loader": "^9.2.3",
     "webpack": "5.38.1",
     "webpack-cli": "4.7.2",
-    "webpack-dev-server": "3.11.2"
+    "webpack-dev-server": "3.11.2",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "@fluentui/react": "^8.18.0",
     "@material-ui/core": "^4.11.4",
     "axios": "^0.21.1",
     "react": "^17.0.2",
