created server script

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,6 @@
         "pokemons"
     ],
     "eslint.options": {
-        "ignorePattern": "webpack.*.js",
+        "ignorePattern": ["webpack.*.js", "server.js"],
     }
 }
