--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
         "charmander",
         "navyblue",
         "pokecards",
-        "pokemons"
+        "pokemons",
+        "postbuild"
     ],
     "eslint.options": {
         "ignorePattern": ["webpack.*.js", "server.js"],
