--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,9 +7,10 @@
         "charmander",
         "navyblue",
         "pokecards",
-        "pokemons"
+        "pokemons",
+        "postbuild"
     ],
     "eslint.options": {
-        "ignorePattern": "webpack.config.js",
+        "ignorePattern": ["webpack.*.js", "server.js"],
     }
 }
