added a loader and refactored code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,12 @@
         "Gengar",
         "Pikachu",
         "Pokecard",
+        "Pokegrid",
+        "Pokeloader",
         "Squirtle",
         "charmander",
         "navyblue",
+        "pokeball",
         "pokecards",
         "pokemons",
         "postbuild"
